@@ -35,7 +35,7 @@
   <li><strong>screw|edge|edge_add|edge_rm|mixed</strong>: character of the dislocation. The character "mixed" can be used only when using anisotropic elasticity (see below).</li>
   <li><strong>&xi;</strong>: direction of the dislocation line, must be x, y or z.</li>
   <li><strong>n</strong>: direction normal to the plane of cut, must be x, y or z, and must be different from &xi;.</li>
-  <li><strong>b</strong>: norm of the Burgers vector (in &Aring;). For dislocations of type "edge", "edge_add", "edge_rm" and "screw", only one value must be given. For the type "mixed", the three components b<sub>1</sub>, b<sub>2</sub>, b<sub>3</sub> must be provided.</li>
+  <li><strong>b</strong>: norm of the Burgers vector (in &Aring;). For dislocations of type "edge", "edge_add", "edge_rm" and "screw", only one value must be given. For the type "mixed", the three components (b<sub>1</sub>,b<sub>2</sub>,b<sub>3</sub>) must be provided.</li>
   <li><strong>&nu;</strong>: Poisson ratio of the material ; it must be provided for dislocations of character "edge", "edge_add" or "edge_rm". For dislocations of type "screw" or "mixed", it must be omitted.</li>
 </ul>
 
@@ -81,7 +81,7 @@
 
 <p>After displacing atoms, Atomsk also computes the theoretical dislocation stresses (from the continuum theory). Since the shear modulus &mu; is unknown to this option, the stresses are normalized to it, i.e. all stresses are calculated with &mu;=1 (in other words the quantity computed is actually &sigma;/&mu;). The six Voigt components &sigma;<sub>xx</sub>, &sigma;<sub>yy</sub>, &sigma;<sub>zz</sub>, &sigma;<sub>yz</sub>, &sigma;<sub>xz</sub> and &sigma;<sub>xy</sub> are saved as auxiliary properties for each atom. If several dislocations are introduced in the system then the corresponding theoretical stresses are summed. Note that they can be written only to some files formats, like CFG (see <a href="./formats.html">this page</a> for a list of formats that support writing of auxiliary properties).</p>
 
-<p>The use of <strong>anisotropic elasticity</strong> is automatically triggered when the elastic tensor is defined before calling the present option, e.g. through the <a href="./option_properties.html">option <code>-properties</code></a> (see specifications of this option for details on the rotation of the elastic tensor). The dislocation can have a character "screw", "edge", "edge_add", or "edge_rm", as described above. In addition, it is also possible to create a dislocation of mixed character. In this case, the three components of the Burgers vector b<sub>1</sub>, b<sub>2</sub>, b<sub>3</sub> must be given. Then, the equations of anisotropic elasticity are solved to determine the coefficients <em>A<sub>k</sub>(n)</em>, <em>D(n)</em>, <em>P(n)</em> and <em>B<sub>ijk</sub>(n)</em>, and the anisotropic displacements are applied:</p>
+<p>The use of <strong>anisotropic elasticity</strong> is automatically triggered when the elastic tensor is defined before calling the present option, e.g. through the <a href="./option_properties.html">option <code>-properties</code></a> (see specifications of this option for details on the rotation of the elastic tensor). The dislocation can have a character "screw", "edge", "edge_add", or "edge_rm", as described above. In addition, it is also possible to create a dislocation of <strong>mixed character</strong>. In this case, the three components of the Burgers vector must be given, b<sub>3</sub> being along the direction of &#60;&xi;&#62; ("screw" direction), and b<sub>2</sub> along &#60;n&#62; (normal to the glide plane). Then, the equations of anisotropic elasticity are solved to determine the coefficients <em>A<sub>k</sub>(n)</em>, <em>D(n)</em>, <em>P(n)</em> and <em>B<sub>ijk</sub>(n)</em>, and the anisotropic displacements are applied:</p>
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <code>u<sub>k</sub> = </code>&real;{<code> (-2&pi;<em>i</em>)<sup>-1</sup> <strong>&sum;</strong><sub>(n=1,3)</sub> <em>A<sub>k</sub>(n) D(n)</em> ln(x<sub>1</sub>+<em>P(n)</em>x<sub>2</sub>) </code>}, k=1,3</code></p>
 
@@ -93,7 +93,7 @@
 
 <hr>
 
-<p>Dislocation loops can be constructed by using "<strong>-dislocation loop</strong>". In this case, the following parameters must be provided: the coordinates (x,y,z) of the center of the loop, the direction &#60;n&#62; normal to the plane of the loop (must be "X", "Y", or "Z"), the &#60;radius&#62; of the loop, the three components (b<sub>x</sub>,b<sub>y</sub>,b<sub>z</sub>) of the Burgers vector, and the value of the material's Poisson ratio &nu;. The atomic displacements follow the description of D.M. Barnett, <em>Philos. Mag. A</em> <strong>51</strong> (1985) 383-387.</p>
+<p><strong>Dislocation loops</strong> can be constructed by using "<code>-dislocation loop</code>". In this case, the following parameters must be provided: the coordinates (x,y,z) of the center of the loop, the direction &#60;n&#62; normal to the plane of the loop (must be "X", "Y", or "Z"), the &#60;radius&#62; of the loop, the three components (b<sub>x</sub>,b<sub>y</sub>,b<sub>z</sub>) of the Burgers vector, and the value of the material's Poisson ratio &nu;. The atomic displacements follow the description of D.M. Barnett, <em>Philos. Mag. A</em> <strong>51</strong> (1985) 383-387.</p>
 
 <p>The coordinates (x,y,z) of the center of the loop can be provided in &Aring;. It is also possible to give them with respect to the box dimensions with the keyword BOX and an operation (see <a href="./box.html">this page</a>). However, the &#60;radius&#62; of the loop and the Burgers vector components must be given in &Aring;.</p>
 
