@@ -35,7 +35,7 @@
   <li><strong>screw|edge|edge_add|edge_rm|mixed</strong> : caractère de la dislocation. Le caractère "mixed" ne peut être utilisé qu'en élasticité anisotrope (voir ci-dessous).</li>
   <li><strong>&xi;</strong> : direction de la ligne de dislocation, doit être x, y ou z.</li>
   <li><strong>n</strong> : direction normale au plan de coupure, doit être x, y ou z, et doit être différent de <code>&xi;</code>.</li>
-  <li><strong>b</strong> : norme du vecteur de Burgers (en &Aring;). Pour les dislocations de type coin ("edge", "edge_add", "edge_rm") ou vis ("screw"), une seule valeur doit être donnée. Pour celles de caractère mixte ("mixed"), les trois composantes b<sub>1</sub>, b<sub>2</sub>, b<sub>3</sub> doivent être données.</li>
+  <li><strong>b</strong> : norme du vecteur de Burgers (en &Aring;). Pour les dislocations de type coin ("edge", "edge_add", "edge_rm") ou vis ("screw"), une seule valeur doit être donnée. Pour celles de caractère mixte ("mixed"), les trois composantes (b<sub>1</sub>,b<sub>2</sub>,b<sub>3</sub>) doivent être données.</li>
   <li><strong>&nu;</strong> : coefficient de Poisson du matériau ; sa valeur doit être donnée pour construire les dislocations coin ("edge", "edge_add", "edge_rm"). Pour les autres caractères (vis ou mixte), ce paramètre doit être omis.</li>
 </ul>
 
@@ -79,7 +79,7 @@
 
 <p>Après avoir déplacé les atomes, Atomsk calcule aussi les contraines théoriques (prédites par la théorie continue). Cependant, puisque le module de cisaillement &mu; est inconnu de cette option, les contraintes sont normalisées, autrement dit la quantité calculée est en réalité &sigma;/&mu;. Les six composantes de Voigt &sigma;<sub>xx</sub>, &sigma;<sub>yy</sub>, &sigma;<sub>zz</sub>, &sigma;<sub>yz</sub>, &sigma;<sub>xz</sub> et &sigma;<sub>xy</sub>, sont enregistrées comme propriétés auxiliaires pour chaque atome. Si plusieurs dislocations sont introduites dans le système, ces contraintes sont cumulées. Notez que ces propriétés auxiliaires ne peuvent être écrites que vers certains formats de fichiers, comme le CFG (voir <a href="./formats.html">cette page</a> pour une liste de formats supportant les propriétés auxiliaires).</p>
 
-<p>L'<strong>élasticité anisotrope</strong> est automatiquement utilisée lorsque le tenseur élastique est défini avant que la présente option ne soit appelée, par ex. avec l'<a href="./option_properties.html">option <code>-properties</code></a> (se référer à cette option pour ce qui concerne la rotation du tenseur élastique). La dislocation peut avoir un caractère vis ou coin ("screw", "edge", "edge_add", "edge_rm") comme décrit ci-dessus. De plus, il est également possible de créer une dislocation mixte avec le mot-clé "mixed". Dans ce cas, les trois composantes b<sub>1</sub>, b<sub>2</sub>, b<sub>3</sub> du vecteur de Burgers doivent être fournies. Les équations de l'élasticité anisotrope sont alors résolues pour obtenir les valeurs des coefficients <em>A<sub>k</sub>(n)</em>, <em>D(n)</em>, <em>P(n)</em> et 
+<p>L'<strong>élasticité anisotrope</strong> est automatiquement utilisée lorsque le tenseur élastique est défini avant que la présente option ne soit appelée, par ex. avec l'<a href="./option_properties.html">option <code>-properties</code></a> (se référer à cette option pour ce qui concerne la rotation du tenseur élastique). La dislocation peut avoir un caractère vis ou coin ("screw", "edge", "edge_add", "edge_rm") comme décrit ci-dessus. De plus, il est également possible de créer une dislocation avec un <strong>caractère mixte</strong> avec le mot-clé "mixed". Dans ce cas, les trois composantes du vecteur de Burgers doivent être fournies, b<sub>3</sub> étant suivant la direction de la ligne &#60;&xi;&#62; (direction "vis"), et b<sub>2</sub> suivant &#60;n&#62; (normale au plan de glissement). Les équations de l'élasticité anisotrope sont alors résolues pour obtenir les valeurs des coefficients <em>A<sub>k</sub>(n)</em>, <em>D(n)</em>, <em>P(n)</em> et 
 <em>B<sub>ijk</sub>(n)</em>, et les déplacements anisotropes sont appliqués :</p>
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <code>u<sub>k</sub> = </code>&real;{<code> (-2&pi;<em>i</em>)<sup>-1</sup> <strong>&sum;</strong><sub>(n=1,3)</sub> <em>A<sub>k</sub>(n) D(n)</em> ln(x<sub>1</sub>+<em>P(n)</em>x<sub>2</sub>) </code>}, k=1,3</code></p>
@@ -92,7 +92,7 @@
 
 <hr>
 
-<p>Les boucles de dislocation peuvent être construites en utilisant "<strong>-dislocation loop</strong>". Dans ce cas, les paramètres à fournir sont les suivants&nbsp;: les coordonnées (x,y,z) du centre de la boucle, la direction &#60;n&#62; normale au plan de la boucle (doit être "X", "Y", ou "Z"), le &#60;rayon&#62; de la boucle, les trois composantes (b<sub>x</sub>,b<sub>y</sub>,b<sub>z</sub>) du vecteur de Burgers, et le module de Poisson &nu; du matériau. Les déplacements atomiques sont alors ceux décrits par D.M. Barnett, <em>Philos. Mag. A</em> <strong>51</strong> (1985) 383-387.</p>
+<p>Les <strong>boucles de dislocation</strong> peuvent être construites en utilisant "<code>-dislocation loop</code>". Dans ce cas, les paramètres à fournir sont les suivants&nbsp;: les coordonnées (x,y,z) du centre de la boucle, la direction &#60;n&#62; normale au plan de la boucle (doit être "X", "Y", ou "Z"), le &#60;rayon&#62; de la boucle, les trois composantes (b<sub>x</sub>,b<sub>y</sub>,b<sub>z</sub>) du vecteur de Burgers, et le module de Poisson &nu; du matériau. Les déplacements atomiques sont alors ceux décrits par D.M. Barnett, <em>Philos. Mag. A</em> <strong>51</strong> (1985) 383-387.</p>
 
 <p>Les coordonnées (x,y,z) du centre de la boucle peuvent être fournies en &Aring;. Il est aussi possible de spécifier des distances relatives aux dimensions de la boîte avec le mot-clé BOX et une opération (voir <a href="./box.html">cette page</a>). Toutefois, le &#60;rayon&#62; de la boucle ainsi que les composantes du vecteur de Burgers doivent impérativement être donnés en &Aring;.</p>
 
